# freedb

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  wrangler.toml
sql/: schema.sql
src/: index.js
src/db/: index.js
src/freedb/: __init__.py
src/freedb/core/: __init__.py  database.py
src/middleware/: visit_logger.js
src/public/assets/js/: admin.js  dashboard.js  md5.js
src/routes/: admin_api.js  admin_dashboard.js  admin_tokens.js  admin_users.js  admin_visits.js  app_versions.js  demo.js  demo_json_data.js  html.js  json_data.js  static_assets.js  users.js
src/templates/layouts/: admin.js
src/templates/pages/: dashboard.js
